Working cleaner headerbar, bootstrap

--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -3,6 +3,7 @@
   <p>This is my website.
     On this website you may find out what sort of projects I have worked on, a little bit about me and my contact
     information.
-    Just click the differennt tabs to navigate to the other pages.
+    Just click the different tabs to navigate to the other pages.
   </p>
+  <img src="mybitmoji.png" alt="mybitmoji" class="center" style="width: 200px;">
 </div>
