added new and improved contact form and fixed the design of the page fixed the images and videos

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -19,15 +19,14 @@
     <p>I mainly play basketball now for fun. I used to play ice hockey on a team and I love to skate.</p>
   </article>
 
-  <div class="row">
-    <div class="column">
-      <img src="picture of myself.jpg" alt="picture of myself" class="center" style="width: 200px;">
-    </div>
-    <div class="column">
-      <video width="320" height="240" class="" controls autoplay loop muted>
-        <source src="cat.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-  </div>
+  <div id="wrapper"> 
+    
+    <img src="Assets\images\picture of myself.jpg" alt="picture of myself" width="400" height="300" controls="controls" preload="none">
+    <video id="home2" width="400" height="300" poster="images/video.jpg" controls="controls" preload="none" controls autoplay loop muted> 
+        <source type="video/mp4" src="Assets\images\cat.mp4" /> 
+    </video>
+    <div class="clear"></div> 
+</div>
+
+  
 </div>
