--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -5,5 +5,5 @@
     information.
     Just click the different tabs to navigate to the other pages.
   </p>
-  <img src="mybitmoji.png" alt="mybitmoji" class="center" style="width: 200px;">
+  <img src="Assets\images\mybitmoji.png" alt="mybitmoji" class="center" style="width: 200px;">
 </div>
