--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,7 +1,7 @@
 <!-- Bottom Nav Bar -->
 <nav class="navbar fixed-bottom navbar-dark bg-dark">
 <div class="container-fluid">
-  <h6 class="navbar-text">&copy; Copyright 2022. All Rights reserved.</h6>
+  <h6 class="navbar-text">&copy; Copyright 2022. All Rights reserved. 2022 by Ganan Seevananthan</h6>
   <h6 class="navbar-text">
   
   <button onclick="window.location.href='https://github.com/GananS';">
