--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,14 +1,52 @@
-  <div id="contact">
-  <h1>Get in contact with me</h1>
-  <form class="cf">
-    <div class="half left cf">
-      <input type="text" id="input-name" placeholder="Name">
-      <input type="email" id="input-email" placeholder="Email address">
-      <input type="text" id="input-subject" placeholder="Subject">
-    </div>
-    <div class="half right cf">
-      <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
-    </div>  
-    <input type="submit" value="Submit" id="input-submit">
-  </form>
-</div>
+<!--Used website https://www.freecodecamp.org/news/how-to-build-a-developer-portfolio-website/#howtostylethenavbar for their form template-->
+<section class="contact" id="contact">
+      <h2>Get In Touch With Me</h2>
+      <div class="contact-form-container">
+        <div class="contact-form">
+          <form action="mailto:someone@example.com" method="POST" enctype="text/plain">
+            <div class="form-control">
+              <label for="name">Name</label>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Enter Your Name"
+                class="input-field"
+                required
+              />
+            </div>
+            <div class="form-control">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                id="email"
+                name="sender-email"
+                placeholder="Enter Your Email"
+                class="input-field"
+                required
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+              />
+            </div>
+            <div class="form-control">
+              <label for="message">Message</label>
+              <textarea
+                id="message"
+                cols="60"
+                rows="10"
+                placeholder="Enter Your Message"
+                name="message"
+                class="input-field"
+                size="50"
+                required
+              ></textarea>
+            </div>
+            <input
+              type="submit"
+              value="Submit"
+              id="submit-btn"
+              class="submit-btn"
+            />
+          </form>
+        </div>
+      </div>
+    </section>
