--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,9 @@
   <link rel='stylesheet' href='/Content/app.css' />
   <link rel="stylesheet" href ="/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href ="/@fortawesome/fontawesome-free/css/all.min.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   
 </head>
 <body>
+  
+  
