added crud database

--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -28,12 +28,12 @@
         </li>
 
         <li class="nav-item">
-          <% if (title == "Books") { %>
-          <a class="nav-link active" href="/book-list">
+          <% if (title == "Schedule") { %>
+          <a class="nav-link active" href="/schedule-list">
             <% } else { %>
-            <a class="nav-link" href="/book-list">
+            <a class="nav-link" href="/schedule-list">
               <% } %>
-              <i class="fas fa-book"></i></i> Books </a>
+              <i class="fas fa-schedule"></i></i> Schedule </a>
         </li>
 
         <li class="nav-item">
