--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -30,7 +30,7 @@ html {
 
 /* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
-    color: black;
+    color: white;
     display: none;
     padding: 100px 20px;
     height: 100%;
@@ -77,6 +77,7 @@ img {
     clear: both;
     display: table;
 }
+
 
 @media only screen and (max-width: 600px) {
     .example {
